ManifoldCF Change Log
$Id$

======================= Release 2.8.1 =====================


======================= Release 2.8 =====================

CONNECTORS-1445: Fix timezone handling in reports to use browser timezone
and add a timezone field for the editjob schedule page as well. 
(Kishore Kumar, Karl Wright)

CONNECTORS-1447: Update postgresql driver to the most current version.
This should allow error free operation with Postgresql versions back to
version 8.
(Karl Wright)

CONNECTORS-1446: Confluence connector's UI was broken; protocol
selection was not working.
(Ty Taylor, Karl Wright)

CONNECTORS-1444: Documentum connector needs the ability to skip
corrupted files.
(Tamizh Kumaran Thamizharasan, Karl Wright)

CONNECTORS-1440: Add support for created date in File System connector.
(Steph van Schalkwyk, Karl Wright)

CONNECTORS-1438: Wrong content-type parse in Solr connector caused
failure when content type contained a charset.
(Kenta Kasahara, Karl Wright)

CONNECTORS-1434: Escape filenames in Solr Http headers to match spec.
This is a workaround for a fix that really should be in HttpClient.
(Karl Wright, Tamizh Kumaran Thamizharasan)

CONNECTORS-1433: Add pipeline specification to ES connector.
(Steph van Schalkwyk, Karl Wright)

CONNECTORS-1432: Fix deleting stale check methods from window object
(Steph van Schalkwyk, Karl Wright, Kishore Kumar)

CONNECTORS-1251: Fix encoding issues with confluence connector.
(Marisol Redondo, Karl Wright)

CONNECTORS-1431: Support different versions of ES (including 5.x and
up).
(Karl Wright, Hans Van Goethem)

CONNECTORS-1428: Add support for configuring Tika extractor.
(Julien Massiera, Karl Wright)

CONNECTORS-1426: Fix New UI to prevent Bootstrap tab click event.
(Karl Wright, Kishore Kumar)

CONNECTORS-1425: Add tikaservice transformation connector.
(Julien Massiera, Karl Wright)

CONNECTORS-1424: Add contentlimiter transformation connector.
(Julien Massiera)
