@@ -56,7 +56,7 @@
     <property name="commons-cli.version" value="1.2"/>
     <property name="slf4j.version" value="1.7.7"/>
     <property name="xalan.version" value="2.7.1"/>
-    <property name="poi.version" value="3.15"/>
+    <property name="poi.version" value="3.9"/>
     <property name="activation.version" value="1.1.1"/>
     <property name="avalon.version" value="4.3.1"/>
     <property name="ecj.version" value="4.3.1"/>
