@@ -46,6 +46,7 @@
             <include name="json-simple*.jar"/>
             <include name="commons-codec*.jar"/>
             <include name="commons-collections-*.jar"/>
+            <include name="commons-collections4-*.jar"/>
             <include name="commons-el*.jar"/>
             <include name="commons-fileupload*.jar"/>
             <include name="httpcore*.jar"/>
@@ -68,6 +69,10 @@
             <include name="xml-apis*.jar"/>
             <include name="velocity*.jar"/>
             <include name="mail*.jar"/>
+            <include name="poi*.jar"/>
+            <include name="dom4j*.jar"/>
+            <include name="xmlbeans*.jar"/>
+            <include name="curvesapi*.jar"/>
             <include name="commons-exec*.jar"/>
             <include name="gson*.jar"/>
             <include name="guava*.jar"/>
@@ -129,7 +134,6 @@
             <include name="quartz*.jar"/>
             <include name="c3p0*.jar"/>
             <include name="tagsoup*.jar"/>
-            <include name="poi*.jar"/>
             <include name="vorbis-java*.jar"/>
             <include name="apache-mime4j-core*.jar"/>
             <include name="apache-mime4j-dom*.jar"/>
@@ -140,9 +144,6 @@
             <include name="bcmail-jdk15on*.jar"/>
             <include name="bcprov-jdk15on*.jar"/>
             <include name="bcpkix-jdk15on*.jar"/>
-            <include name="curvesapi*.jar"/>
-            <include name="xmlbeans*.jar"/>
-            <include name="dom4j*.jar"/>
             <include name="geronimo-stax-api_1.0_spec*.jar"/>
             <include name="asm*.jar"/>
             <include name="isoparser*.jar"/>
@@ -480,6 +481,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -494,6 +496,10 @@
                 <include name="xml-apis*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -523,6 +529,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -537,6 +544,10 @@
                 <include name="xml-apis*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -572,6 +583,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -586,6 +598,10 @@
                 <include name="xml-apis*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -616,6 +632,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -630,6 +647,10 @@
                 <include name="xml-apis*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -667,6 +688,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -682,6 +704,10 @@
                 <include name="velocity*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -723,6 +749,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -738,6 +765,10 @@
                 <include name="velocity*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -783,6 +814,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -798,6 +830,10 @@
                 <include name="velocity*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -837,6 +873,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -852,6 +889,10 @@
                 <include name="velocity*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -960,6 +1001,7 @@
                 <include name="json-simple*.jar"/>
                 <include name="commons-codec*.jar"/>
                 <include name="commons-collections*.jar"/>
+                <include name="commons-collections4*.jar"/>
                 <include name="commons-el*.jar"/>
                 <include name="commons-fileupload*.jar"/>
                 <include name="httpcore*.jar"/>
@@ -976,6 +1018,10 @@
                 <include name="velocity*.jar"/>
                 <include name="slf4j*.jar"/>
                 <include name="mail*.jar"/>
+                <include name="poi*.jar"/>
+                <include name="dom4j*.jar"/>
+                <include name="xmlbeans*.jar"/>
+                <include name="curvesapi*.jar"/>
                 <include name="commons-exec*.jar"/>
                 <include name="gson*.jar"/>
                 <include name="guava*.jar"/>
@@ -1202,6 +1248,7 @@
             <include name="commons-lang*.jar"/>
             <include name="commons-codec*.jar"/>
             <include name="commons-collections*.jar"/>
+            <include name="commons-collections4*.jar"/>
             <include name="commons-el*.jar"/>
             <include name="commons-fileupload*.jar"/>
             <include name="commons-io*.jar"/>
@@ -1224,6 +1271,10 @@
             <include name="httpcore*.jar"/>
             <include name="httpclient*.jar"/>
             <include name="mail*.jar"/>
+            <include name="poi*.jar"/>
+            <include name="dom4j*.jar"/>
+            <include name="xmlbeans*.jar"/>
+            <include name="curvesapi*.jar"/>
             <include name="commons-exec*.jar"/>
             <include name="gson*.jar"/>
             <include name="guava*.jar"/>
@@ -1507,7 +1558,6 @@
                 <include name="quartz*.jar"/>
                 <include name="c3p0*.jar"/>
                 <include name="tagsoup*.jar"/>
-                <include name="poi*.jar"/>
                 <include name="vorbis-java*.jar"/>
                 <include name="netcdf*.jar"/>
                 <include name="unidataCommon*.jar"/>
@@ -1523,9 +1573,6 @@
                 <include name="bcmail-jdk15*.jar"/>
                 <include name="bcprov-jdk15*.jar"/>
                 <include name="bcpkix-jdk15*.jar"/>
-                <include name="curvesapi*.jar"/>
-                <include name="xmlbeans*.jar"/>
-                <include name="dom4j*.jar"/>
                 <include name="geronimo-stax-api_1.0_spec*.jar"/>
                 <include name="asm*.jar"/>
                 <include name="isoparser*.jar"/>
