@@ -83,7 +83,7 @@
     <jaxb.version>2.2.6</jaxb.version>
     <zookeeper.version>3.4.8</zookeeper.version>
     <xmlbeans.version>2.6.0</xmlbeans.version>
-    <poi.version>3.15-beta1</poi.version>
+    <poi.version>3.9</poi.version>
     <tika.version>1.14</tika.version>
     <boilerpipe.version>1.1.0</boilerpipe.version>
     <hadoop.version>2.6.0</hadoop.version>
